syntax = "proto3";

option csharp_namespace = "GrpcServer.Web.Protos";

message GrpcGetAddRequest
{
	int32 A=1;
	int32 B=2;
}

message GrpcGetAddResponse
{
	int32 Result=1;
}

service TestGrpcService
{
	rpc GetAdd(GrpcGetAddRequest) returns(GrpcGetAddResponse) ;
}
